import remark from 'remark';
import { repairEscaping } from '../markdown/repair-escaping';

it('replaces less than and greater than symbols with markers', () => {
  const out = remark().use(repairEscaping).processSync(`
<b>Returns:</b>

Foo<Bar>

`).contents;
  expect(out).toMatchSnapshot();
});

it('replaces less than and greater than symbols with markers', () => {
  const out = remark().use(repairEscaping).processSync(`
  ---
  id: page-context.staticcontenthashes
  hide_title: true
  custom_edit_url: null
  title: StaticContentHashes interface
  ---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) > [page-context](./page-context.md) > [StaticContentHashes](./page-context.staticcontenthashes.md)

## StaticContentHashes interface

<b>Signature:</b>

\`\`\`typescript
export interface StaticContentHashes
\`\`\`

## Properties

  |  Property | Type | Description |
  |  --- | --- | --- |
  |  [hashes](./page-context.staticcontenthashes.hashes.md) | Record<string, Record<string, Record<string, unknown>>> |  |
`).contents;
  expect(out).toMatchSnapshot();
});

it('replaces less than and greater than symbols with markers with links', () => {
  const out = remark().use(repairEscaping).processSync(`
<b>Returns:</b>

Foo<[Bar]('./bar')>

`).contents;
  expect(out).toMatchSnapshot();
});

it(`doesn't replace all less than and greater than symbols`, () => {
  const out = remark().use(repairEscaping).processSync(`

If I write a thing up here we escape bar<neat>

<b>Returns:</b>

Foo<[Bar]('./bar')>

    `).contents;
  expect(out).toMatchSnapshot();
});
