// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't replace all less than and greater than symbols 1`] = `
"If I write a thing up here we escape bar<neat>

<b>Returns:</b>

Foo\\\\_\\\\__REPAIR_LT\\\\_\\\\_\\\\_[Bar]('./bar')\\\\__\\\\_REPAIR_GT\\\\_\\\\_\\\\_
"
`;

exports[`replaces less than and greater than symbols with markers 1`] = `
"<b>Returns:</b>

Foo<Bar>
"
`;

exports[`replaces less than and greater than symbols with markers 2`] = `
"***

## id: page-context.staticcontenthashes&#xA;hide_title: true&#xA;custom_edit_url: null&#xA;title: StaticContentHashes interface

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) \\\\__\\\\_REPAIR_GT\\\\_\\\\_\\\\_ [page-context](./page-context.md) \\\\__\\\\_REPAIR_GT\\\\_\\\\_\\\\_ [StaticContentHashes](./page-context.staticcontenthashes.md)

## StaticContentHashes interface

<b>Signature:</b>

\`\`\`typescript
export interface StaticContentHashes
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [hashes](./page-context.staticcontenthashes.hashes.md) | Record\\\\_\\\\__REPAIR_LT\\\\_\\\\__string, Record\\\\_\\\\__REPAIR_LT\\\\_\\\\__string, Record\\\\_\\\\__REPAIR_LT\\\\_\\\\__string, unknown\\\\_\\\\__REPAIR_GT\\\\_\\\\_\\\\_\\\\_\\\\_\\\\_REPAIR_GT\\\\_\\\\_\\\\_\\\\_\\\\_\\\\_REPAIR_GT\\\\_\\\\_\\\\_ |  |
"
`;

exports[`replaces less than and greater than symbols with markers with links 1`] = `
"<b>Returns:</b>

Foo\\\\_\\\\__REPAIR_LT\\\\_\\\\_\\\\_[Bar]('./bar')\\\\__\\\\_REPAIR_GT\\\\_\\\\_\\\\_
"
`;
